--- a/delivr-aide-react-website-1.0/package.json
+++ b/delivr-aide-react-website-1.0/package.json
@@ -1,6 +1,7 @@
 {
   "name": "delivr-aide-react-website-1.0",
   "version": "0.1.0",
+  "homepage": "https://delivraide.org/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
