--- a/delivr-aide-react-website-1.0/package.json
+++ b/delivr-aide-react-website-1.0/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
+    "dotenv": "^8.2.0",
     "emailjs-com": "^2.6.4",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
