Added tech kit request

--- a/delivr-aide-react-website-1.0/.env
+++ b/delivr-aide-react-website-1.0/.env
@@ -1,3 +1,7 @@
 REACT_APP_USER_KEY = aG1Z8D5rPKDmniQSHKKH9
 REACT_APP_SERVICE_KEY = fdhkoz3
 REACT_APP_TEMPLATE_KEY = wnlrxrk
+
+REACT_APP_USER_KEY_TECH = Zyug16AsVdXLrq4L9zX2F
+REACT_APP_SERVICE_KEY_TECH = 77jxbqo
+REACT_APP_TEMPLATE_KEY_TECH = 20xw2zr
